--- a/style/media.css
+++ b/style/media.css
@@ -56,6 +56,12 @@
   .max-w-70 {
     max-width: 50px;
   }
+  .text-2xl {
+    font-size: 20px;
+  }
+  .mt-60 {
+    margin-top: 40px;
+  }
 }
 @media (max-width: 1024px) {
   .max-w-560 {
@@ -117,6 +123,12 @@
   }
   .p-155-70-100-90 {
     padding: 80px 40px 70px 40px;
+  }
+  .text-2xl {
+    font-size: 18px;
+  }
+  .mt-60 {
+    margin-top: 35px;
   }
 }
 @media (max-width: 768px) {
@@ -214,5 +226,17 @@
 @media (max-width: 640px) {
   .d-flex-r {
     flex-direction: column;
+  }
+  .text-2xl {
+    font-size: 16px;
+  }
+  .mt-60 {
+    margin-top: 30px;
+  }
+  .p-16-24 {
+    padding: 12px 20px;
+  }
+  .mb-100 {
+    margin-bottom: 30px;
   }
 }
